--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-emoji": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
